
3.2.3.0 (not yet released)
- patch #2856664 [export] Date, time, and datetime column types now export correctly to
  OpenOffice Spreadsheet, thanks to Thomas Pulickal - jemajoign
- patch #2859788 [parser] Double-character delimiters (bug #2846239), 
  thanks to Thomas Pulickal - jemajoign
- bug #2832600 [export] Slow export when having lots of databases 

3.2.2.0 (2009-09-13)
- bug #2825293 [structure] Default value for a BIT column
- bug [display] Red arrows were reversed in the list of tables 
- bug #2813879 [export] Duplicate empty lines when exporting without comments 
- bug #2825919 [export] Trigger export with database name 
- bug #2823996 [data] Cannot edit row with no PK and a BIT field 
- bug [export] Exporting results of a query which contains a LIMIT clause
  inside a subquery
- bug #2837722 [export] Run complex SQL then export does not work 
- bug #2839548 [export] Triggers order on export 
- bug #2826986 [display] Order by BLOB and range display 
- bug [display] After clicking on Show Function or Function, the UPDATE query
  is not shown after execution
- bug [structure] Missing validation for BINARY and VARBINARY

3.2.1.0 (2009-08-09)
- bug #2799009 Login with ipv6 IP address breaks redirect
- bug #2796066 [priv] Inconsistent display of databases list
- bug #2802870 [display] Incorrect overhead value for InnoDB 
- bug [display] Incorrect display in replication status, 
  thanks to Tomas Srnka - tomassrnka
- bug #1601625 [display] The Ignore checkbox is not unchecked for ENUM
- bug #2809930 [setup] Notice: Undefined variable: k in setup/index.php
- bug [features] Incorrect report of missing relational features
- [security] XSS: Insufficient output sanitizing (not exploitable without a valid token)
  thanks to Sven Vetsch/Disenchant for informing us in a responsible manner 
- bug #2634827 [import] Using DELIMITER produces infinite cycle
+ new language files: uzbek_cyrillic and urbek_latin
- bug #2814109 [search] Right frame is blank 